--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
+    "expo-localization": "~14.3.0",
     "expo-router": "^2.0.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "i18next": "^23.7.17",
     "native-base": "^3.4.28",
     "react": "18.2.0",
+    "react-i18next": "^14.0.1",
     "react-native": "0.72.6",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.6.3",
