--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "molodizhkaapp",
-    "slug": "molodizhkaapp",
+    "slug": "molodizka",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -31,10 +31,13 @@
     },
     "extra": {
       "eas": {
-        "projectId": "8fd751c4-e0f9-4cf5-b77a-f19a377ec9b0"
+        "projectId": "02e0252d-feff-4de6-9d21-61921e99cd2e"
+      },
+      "router": {
+        "origin": false
       }
     },
-    "owner": "craftproduct",
+    "owner": "banerr",
     "plugins": [
       "expo-router"
     ]
