--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "react-i18next": "^14.0.1",
     "react-native": "0.72.6",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "^3.6.1",
+    "react-native-qrcode-svg": "^6.2.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^13.9.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
